--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   line-height: 1;
 }
 
-/* input fields*/
 textarea {
   background: transparent;
   border: none;
@@ -20,26 +19,24 @@ textarea {
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  color: rgb(6, 173, 213);
 }
 
-/* unusued class */
 .description {
   white-space: pre-wrap;
 }
 
-/* unused class - the blue button?? 
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
 
-/* each hour's content is a row */
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
 }
 
-/* time  */
 .hour {
   background-color: #ffffff;
   color: #000000;
@@ -48,20 +45,19 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
-/* blue button */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
@@ -70,7 +66,14 @@ textarea {
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+  color:black;
+}
+
+footer {
+  margin:20px;
+  text-align: center;
+  color: rgb(6, 173, 213);
 }
